--- a/cart-service-test.properties
+++ b/cart-service-test.properties
@@ -1,11 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/cart4j_cart
-spring.datasource.username=cart4j
-spring.datasource.password=cart4j123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.validationQuery=SELECT 1
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=sa
+
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.cart4j.auth=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.datasource.initialization-mode=never
 
 auth.server.client.id=CART-API
 auth.server.client.secret=12345
